force-app/packaged/main/default/objects/Manifest_Package__c/Manifest_Package__c.object-meta.xml
<CustomObject>
    <label>Manifest Package</label>
    <nameField>
        <displayFormat>MP-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manifest Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>