force-app/packaged/main/default/objects/Manifest_Package__c/fields/Column_Number__c.field-meta.xml
<CustomField>
    <fullName>Column_Number__c</fullName>
    <description>Used in the Manifest Canvas to lay the versions out correctly in the UI</description>
    <label>Column Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>