force-app/packaged/main/default/objects/Manifest_Package__c/fields/Manifest__c.field-meta.xml
<CustomField>
    <fullName>Manifest__c</fullName>
    <label>Manifest</label>
    <referenceTo>Manifest__c</referenceTo>
    <relationshipLabel>Manifest Packages</relationshipLabel>
    <relationshipName>Manifest_Packages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>