force-app/packaged/main/default/objects/Manifest_Package__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package</label>
    <referenceTo>sfLma__Package__c</referenceTo>
    <relationshipLabel>Manifest Packages</relationshipLabel>
    <relationshipName>Manifest_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>