force-app/packaged/main/default/objects/Manifest_Package__c/fields/Package_Id__c.field-meta.xml
<CustomField>
    <fullName>Package_Id__c</fullName>
    <description>The ID of the package to which the package version in this manifest package is related</description>
    <formula>Package_Version__r.sfLma__Package__c</formula>
    <label>Package Id</label>
    <type>Text</type>
</CustomField>