force-app/packaged/main/default/objects/Manifest_Package__c/fields/Package_Version__c.field-meta.xml
<CustomField>
    <fullName>Package_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Version</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sfLma__Package_Version__c.sfLma__Package__c</field>
            <operation>equals</operation>
            <valueField>$Source.Package__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sfLma__Package_Version__c</referenceTo>
    <relationshipLabel>Provisioning Manifest Packages</relationshipLabel>
    <relationshipName>Manifest_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>